2014-09-09  Kaz Kylheku  <kaz@kylheku.com>

	* txr.c (help): Revised help text.

2014-09-08  Kaz Kylheku  <kaz@kylheku.com>

	* gc.c (MALLOC_DELTA_THRESH): Macro remaned to DFL_MALLOC_DELTA_THRESH.
	(opt_gc_delta): New global variable.
	(make_obj): Use opt_gc_delta rather than MALLOC_DELTA_THRESH.
	(gc_set_delta, gc_wrap): New static functions.
	(gc_late_init): New function.

	* gc.h (gc_late_init): Declared.

	* genvim.txr: scan gc.c also.

	* lib.c (init): call gc_late_init.

	* txr.1: Document new --gc-delta option and the functions
	gc and gc-set-delta.

	* txr.c (help): Help text for --gc-delta.
	(txr_main): Parse --gc-delta option.

	* txr.h (opt_gc_delta): Declared.

2014-09-06  Kaz Kylheku  <kaz@kylheku.com>

	Make the garbage collector aware of malloced bytes, to
	prevent skyrocketing memory use when the program manipulates
	heap objects that have large amounts of malloc memory
	attached, like very large bignums.

	* gc.c (MALLOC_DELTA_THRESH): New preprocessor symbol.
	(prev_malloc_bytes): New static variable.
	(make_obj): when the value of malloc_bytes jumps by MALLOC_DELTA_THRESH
	or more since the last gc, trigger gc.

2014-09-03  Kaz Kylheku  <kaz@kylheku.com>

	* lib.c (symbol_setname): New static function.
	(obj_init): Change exception symbol names with underscores
	to use friendly dashes instead.
	(compat_fixup): New function.

	* lib.h (compat_fixup): Declared.

	* txr.1: Change occurrences of exception symbols from
	underscores to dashes.

	* txr.c (txr_main): Call compat_fixup when -C option
	is processed.

2014-09-02  Kaz Kylheku  <kaz@kylheku.com>

	* txr.1: Document -C option.

	* txr.c (opt_compat): New global variable.
	(help): Describe -C option.
	(txr_main): Process -C, and set opt_compat.
	Ensure -C does not clump.

	* txr.h (opt_compat): Declared.

2014-09-02  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (eval_init): Update registration of lisp-parse and read
	to account for new parameter.

	* lib.c (syntax_error_s): New symbol_variable.